fix(ci): fix paths, again

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 24
           cache: "npm"
-          cache-dependency-path: ./package-lock.json
+          cache-dependency-path: ${{ github.workspace }}/package-lock.json
 
       - name: Install dependencies
         working-directory: .
